# Etrade-stock-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEVELOPMENT_LOG.md  Makefile  README.md  ROADMAP.md  com.stockmonitor.plist  pyproject.toml  requirements.txt  restart.sh  restart_server.sh  run_backtests.sh  setup_server.sh  stockmonitor.service
data/: ic_results.json  quant_model.json
scripts/: setup.sh
src/: main.py
src/analysis/: analyzer.py
src/backtest/: engine.py  report.py  storage.py
src/data/: fetcher.py
src/email/: sender.py
src/etrade/: auth.py  portfolio.py
src/forecast/: base.py  quant.py  signals.py
src/news/: scraper.py
src/research/: backtest_visual.py  ic_analysis.py  run.py  screener.py
src/universe/: sp500.py
src/utils/: config.py  logger.py  telegram_bot.py
tests/: test_analyzer.py  test_news_scraper.py
